2006-07-15  Roger Leigh  <rleigh@debian.org>

	* debian/changelog, debian/rules: Fix problem in config.status
	rule.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 0.99.4.

	* NEWS: Bump version to 0.99.4.

	* configure.ac: Bump version to 0.99.4.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* Version 0.99.3

	* debian/changelog: Finalise for 0.99.3.

	* schroot/schroot-releaselock-main.cc: Fix typo.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* HACKING: Document manual chroot fallback testing.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* TODO: Add remaining items for 1.0.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-null.h: Remove completed TODO item.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* schroot/schroot.conf.5.in: Add undocumented features.

	* schroot/schroot.conf: Add undocumented features.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* THANKS: Add Simon Richter.

	* sbuild/sbuild-session.cc
	(run_impl): Move session opening and closing here.  The session is
	opened and closed outside the chroot as root.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* Update doxygen API reference.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-base-main.cc
	(run): Return rather than calling exit.

2006-07-14  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #378152.

	* Having a single exit point now means terminal settings are
	always restored correctly.

	* sbuild/sbuild-run-parts.cc: Use _exit rather than exit when
	terminating a child process when execve has failed.

	* sbuild/sbuild-session.cc: Use _exit rather than exit when
	terminating a child process when execve has failed.

	* schroot/schroot-releaselock-main.(cc|h): Add error_code enum and
	error typedef for sbuild::custom_error.  Throw error in place of
	exiting with EXIT_FAILURE.
